project2/tests/311d.rc
function : void main()
{
	int a[500];
	
	a[400] = 5;
	
	a[499] = 9;
	
	int b = 1;
	
	a[499+b] = 10; //error
}